fix(User): user age

--- a/Views/User/LoginAndRegister.cshtml
+++ b/Views/User/LoginAndRegister.cshtml
@@ -37,8 +37,8 @@
             <input type="password" class="password" placeholder="Password"  name="password" required/>
           </div>
           <div class="input-field">
-            <i class="fa fa-calendar"></i>
-            <input type="number" class="age" placeholder="Age"  name="age" min="0" required/>
+            <i class="fa fa-birthday-cake"></i>
+            <input type="date" class="birthdate" placeholder="BirthDate"  name="birthdate" required/>
           </div>
           <div class="input-field">
             <i class="fa fa-venus-mars"></i>
