--- a/Views/User/History.cshtml
+++ b/Views/User/History.cshtml
@@ -9,4 +9,4 @@
     <h1 class="display-4">My History</h1>
     <hr class="split">
 </div>
-<partial name="../Shared/_EventHistory.cshtml" />
+<partial name="../Shared/_EventBannerList.cshtml" />
