--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -2,240 +2,206 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
-
-.editPost {
-    width: 95%;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.header {
+  }
+  
+  .EditPost {
+      width: 95%;
+      margin: 50px auto;
+      padding: 20px;
+      background-color: #f9f9f9;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  .header {
     margin-bottom: 10px;
-}
-
-.PropertyCategory {
+  }
+  
+  .PropertyCategory {
     margin-bottom: 20px;
     margin-left: 100px;
-}
-
-.category-boxes {
+  }
+  
+  .category-boxes {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); 
-    gap: 10px; 
-}
-
-.category-box {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+  
+  .category-box {
     padding: 10px;
     cursor: pointer;
-    border: 1px solid #ccc; 
-    transition: box-shadow 0.3s; 
-}
-
-.category-box:hover {
+    border: 1px solid #ccc;
+    transition: box-shadow 0.3s;
+  }
+  
+  .category-box:hover {
     opacity: 0.8;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); 
-}
-
-.category-box[data-category="meeting"] {
-    border: 2px solid black; 
-    border-radius: 20px; 
-    font-size: 18px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-}
-.category-box[data-category="meeting"] i.fa {
-    font-size: 24px; 
-    margin-bottom: 5px;
-}
-
-.category-box[data-category="exercising"] {
-    border: 2px solid black; 
-    border-radius: 20px; 
-    font-size: 18px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-}
-
-.category-box[data-category="exercising"] i.fa {
-    font-size: 24px; 
-    margin-bottom: 5px;
-}
-
-.category-box[data-category="eating"] {
-    border: 2px solid black; 
-    border-radius: 20px; 
-    font-size: 18px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-}
-
-.category-box[data-category="eating"] i.fa {
-    font-size: 24px; 
-    margin-bottom: 5px;
-}
-
-.category-box[data-category="working"] {
-    border: 2px solid black; 
-    border-radius: 20px; 
-    font-size: 18px;
-    padding: 20px;
-    width: auto;
-    height: auto;
-}
-
-.category-box[data-category="working"] i.fa {
-    font-size: 24px; 
-    margin-bottom: 5px;
-}
-
-.category-box.selected {
-    background-color: #afe3fc; 
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  }
+  
+  .category-box {
+      border: 2px solid black; 
+      border-radius: 20px; 
+      font-size: 18px;
+      padding: 20px;
+      width: auto;
+      height: auto;
+  }
+  
+  .category-box i.fa {
+      font-size: 24px; 
+      margin-bottom: 5px;
+  }
+  
+  
+  .category-box.selected {
+    background-color: #afe3fc;
     border: 2px solid #0080ff;
-    color: black; 
-}
-
-.detailbox {
+    color: black;
+  }
+  
+  .detailbox {
     margin-bottom: 20px;
     margin-left: 100px;
     margin-right: 20px;
     display: grid;
-    grid-template-columns: 45% 25% 30%; 
-    gap: 10px; 
-
-}
-
-.inputtitle{
-    border: 2px solid black; 
-    border-radius: 20px; 
+    grid-template-columns: 45% 25% 30%;
+    gap: 10px;
+  }
+  
+  .inputtitle {
+    border: 2px solid black;
+    border-radius: 20px;
     font-size: 18px;
     padding: 20px;
     width: auto;
     height: auto;
-}
-
-.title {
-    border: none; 
-    background: none; 
-    padding: 5px 0; 
+  }
+  
+  .title {
+    border: none;
+    background: none;
+    padding: 5px 0;
     width: 100%;
-}
-
-.inputPeople{
-    border: 2px solid black; 
-    border-radius: 20px; 
+  }
+  
+  .inputPeople {
+    border: 2px solid black;
+    border-radius: 20px;
     font-size: 18px;
     padding: 20px;
     width: auto;
     height: auto;
-}
-
-.enrollSize {
-    border: none; 
-    background: none; 
-    padding: 5px 0; 
+  }
+  
+  .enrollSize {
+    border: none;
+    background: none;
+    padding: 5px 0;
     width: 100%;
-}
-
-.inputdate {
-    border: 2px solid black; 
-    border-radius: 20px; 
+  }
+  
+  .inputdate {
+    border: 2px solid black;
+    border-radius: 20px;
     font-size: 18px;
     padding: 20px;
     width: auto;
     height: auto;
-}
-
-.inputtitle label,
-.inputPeople label,
-.inputdate label {
+  }
+  
+  .endDate{
+      width: 100%;
+  }
+  
+  .inputtitle label,
+  .inputPeople label,
+  .inputdate label {
     display: block;
     margin-bottom: 10px;
-}
-
-.inputdate input[type="datetime-local"] {
+  }
+  
+  .inputdate input[type="datetime-local"] {
     width: 100%;
-}
-
-
-.inputDescription {
-    margin-bottom: 10px;
-    margin-left: 100px;
-    display: grid;
-    width: 100%;
-    gap: 10px; 
-
-}
-
-.inputDescription {
-    border: 2px solid black; 
-    border-radius: 20px; 
+  }
+  
+  .inputDescription {
+      margin-bottom: 10px;
+      display: grid;
+      width: 100%;
+      gap: 10px; 
+  }
+  
+  .inputDescription {
+    border: 2px solid black;
+    border-radius: 20px;
     font-size: 18px;
     padding: 20px;
     width: auto;
     height: auto;
-}
-
-.description {
-    border: none; 
-    background: none; 
-    padding: 5px 0; 
+  }
+  
+  .description {
+    border: none;
+    background: none;
+    padding: 5px 0;
     width: 100%;
-}
-
-.requirement{
+  }
+  
+  .requirement {
     margin-bottom: 20px;
     margin-left: 100px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    gap: 10px; 
-}
-
-.inputRequirement{
-    border: 2px solid black; 
-    border-radius: 20px; 
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+  
+  .inputRequirement {
+    border: 2px solid black;
+    border-radius: 20px;
     font-size: 18px;
     padding: 20px;
     width: auto;
     height: auto;
-}
-
-.minAge {
-    border: none; 
-    background: none; 
-    padding: 5px 0; 
+  }
+  
+  .minAge {
+    border: none;
+    background: none;
+    padding: 5px 0;
     width: 100%;
-}
-
-.maxAge {
-    border: none; 
-    background: none; 
-    padding: 5px 0; 
+  }
+  
+  .maxAge {
+    border: none;
+    background: none;
+    padding: 5px 0;
     width: 100%;
-}
-
-.inputRequirement label {
+  }
+  
+  .inputRequirement label {
     display: block;
     margin-bottom: 10px;
-}
-
-.inputRequirement select {
+  }
+  
+  .inputRequirement select {
     width: 100%;
     font-size: 16px;
-}
-
-
-.postForm {
+  }
+  
+  .category-box.selected {
+      border-color: #0056b3;
+      background-color: #90ccf8; 
+      color: #fff; 
+  }
+  
+  
+  .postForm {
     display: flex;
     flex-direction: column;
-}
-
-input[type="submit"] {
+  }
+  
+  input[type="submit"] {
     display: block;
     width: 15%;
     padding: 10px;
@@ -245,12 +211,194 @@ input[type="submit"] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 20px; 
-    align-self: flex-end; 
-}
-
-input[type="submit"]:hover {
+    margin-top: 20px;
+    align-self: flex-end;
+  }
+  
+  input[type="submit"]:hover {
     background-color: #0056b3;
-}
-
-
+  }
+  
+  .dropdown-check-list {
+      display: inline-block;
+    }
+    
+    .dropdown-check-list .anchor {
+      position: relative;
+      cursor: pointer;
+      display: inline-block;
+      padding: 5px 50px 5px 10px;
+      border: 1px solid #ccc;
+    }
+    
+    .dropdown-check-list .anchor:after {
+      position: absolute;
+      content: "";
+      border-left: 2px solid black;
+      border-top: 2px solid black;
+      padding: 5px;
+      right: 10px;
+      top: 20%;
+      -moz-transform: rotate(-135deg);
+      -ms-transform: rotate(-135deg);
+      -o-transform: rotate(-135deg);
+      -webkit-transform: rotate(-135deg);
+      transform: rotate(-135deg);
+    }
+    
+    .dropdown-check-list .anchor:active:after {
+      right: 8px;
+      top: 21%;
+    }
+    
+    .dropdown-check-list ul.items {
+      padding: 2px;
+      display: none;
+      margin: 0;
+      border: 1px solid #ccc;
+      border-top: none;
+    }
+    
+    .dropdown-check-list ul.items li {
+      list-style: none;
+    }
+    
+    .dropdown-check-list.visible .anchor {
+      color: #0094ff;
+    }
+    
+    .dropdown-check-list.visible .items {
+      display: block;
+    }
+    
+    
+  
+  @media screen and (max-width: 992px) {
+      .category-boxes {
+          grid-template-columns: repeat(2, 1fr); 
+      }
+      .requirement{
+          margin-bottom: 20px;
+          margin-left: 25px;
+          display: grid;
+          grid-template-columns: repeat(3, 1fr); 
+          gap: 10px; 
+      }
+      .PropertyCategory {
+          margin-bottom: 20px;
+          margin-left: 25px;
+      }
+      .detailbox {
+          margin-bottom: 20px;
+          margin-left: 25px;
+          margin-right: 20px;
+          display: grid;
+          grid-template-columns: 45% 25% 30%; 
+          gap: 10px; 
+      }
+      .inputDescription {
+          margin-bottom: 10px;
+          margin-left: 25px;
+          display: grid;
+          width: 100%;
+          gap: 10px; 
+      }
+      .inputDescription {
+          border: 2px solid black; 
+          border-radius: 20px; 
+          font-size: 18px;
+          padding: 20px;
+          width: auto;
+          height: auto;
+      }
+      
+  }
+  
+  @media screen and (max-width: 768px) {
+      .category-boxes {
+          grid-template-columns: repeat(2, 1fr); 
+      }
+      .requirement{
+          margin-bottom: 20px;
+          margin-left: 50px;
+          display: grid;
+          grid-template-columns: repeat(3, 1fr); 
+          gap: 10px; 
+      }
+      .PropertyCategory {
+          margin-bottom: 20px;
+          margin-left: 50px;
+      }
+      .detailbox {
+          margin-bottom: 20px;
+          margin-left: 50px;
+          margin-right: 20px;
+          display: grid;
+          grid-template-columns: 45% 25% 30%; 
+          gap: 10px; 
+      }
+      .inputDescription {
+          margin-bottom: 10px;
+          margin-left: 50px;
+          display: grid;
+          width: 100%;
+          gap: 10px; 
+      }
+      .inputDescription {
+          border: 2px solid black; 
+          border-radius: 20px; 
+          font-size: 18px;
+          padding: 20px;
+          width: auto;
+          height: auto;
+      }
+      
+  }
+  
+  @media screen and (max-width: 500px) {
+      .category-boxes {
+          grid-template-columns: repeat(2, 1fr); 
+      }
+      .requirement{
+          margin-bottom: 20px;
+          margin-right: 20px;
+          margin-left: 10px;
+          display: grid;
+          grid-template-columns: repeat(1, 1fr); 
+          gap: 10px; 
+      }
+      .PropertyCategory {
+          margin-bottom: 20px;
+          margin-left: 10px;
+          margin-right: 20px;
+      }
+      .detailbox {
+          margin-bottom: 20px;
+          margin-left: 10px;
+          margin-right: 20px;
+          display: grid;
+          grid-template-columns: repeat(1, 1fr); 
+          gap: 10px; 
+      }
+      .inputDescription {
+          margin-bottom: 10px;
+          margin-left: 10px;
+          margin-right: 20px;
+          display: grid;
+          width: 100%;
+          gap: 10px; 
+      }
+      .inputDescription {
+          margin-right: 20px;
+          border: 2px solid black; 
+          border-radius: 20px; 
+          font-size: 18px;
+          padding: 20px;
+          width: auto;
+          height: auto;
+  
+      }
+      
+  }
+  
+  
